@startuml
hide circle
skinparam linetype ortho

entity video {
  * id : BIGINT UNSIGNED
  --
  slug : VARCHAR(180)
  title : VARCHAR(500)
  published_at : DATETIME(3)
  is_locked : BOOLEAN
}

entity source_video {
  * id : BIGINT UNSIGNED
  --
  video_id : BIGINT UNSIGNED
  platform : ENUM
  platform_video_id : VARCHAR(190)
  platform_format : ENUM
  is_active : BOOLEAN
}

entity metric_snapshot {
  * id : BIGINT UNSIGNED
  --
  source_video_id : BIGINT UNSIGNED
  snapshot_at : DATETIME(3)
  views_native : BIGINT UNSIGNED
  total_watch_seconds : BIGINT UNSIGNED
  likes : BIGINT UNSIGNED
  comments : BIGINT UNSIGNED
  shares : BIGINT UNSIGNED
}

entity reconcile_override {
  * id : BIGINT UNSIGNED
  --
  source_video_id : BIGINT UNSIGNED
  action : VARCHAR(32)
  target_video_id : BIGINT UNSIGNED
}

entity platform_health
entity batch_run
entity refresh_job_state

video ||--o{ source_video : video_id
source_video ||--o{ metric_snapshot : source_video_id
source_video ||--o{ reconcile_override : source_video_id
video ||--o{ reconcile_override : target_video_id
@enduml
